--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,10 @@
-sonar.projectKey=taskflow
-sonar.projectName=task flow
-sonar.projectVersion=1.1
+sonar.projectKey=taskflowv2
+sonar.projectName=task flow v2
+sonar.projectVersion=1
 sonar.sources=src
 sonar.java.binaries=target/classes
 sonar.login=admin
 sonar.password=ayoub
+
+
+
