--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,14 +17,14 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/taskflow?createDatabaseIfNotExist=true
     username: root
-    password: root
+    password:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         globally_quoted_identifiers: true
   liquibase:
-    enabled: true
+    enabled: false
     change-log: db/master.xml
